# generate-docstring

./: .coverage  .flake8  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
plugins/plugin/: python-docstring.vim
src/docstring/: __main__.py  parser.py  transformer.py
src/docstring/templates/: class_def.py.jinja2  function_def.py.jinja2  module.py.jinja2
tests/: test_docstring.py
tests/testdata/: class.py  class_expected.py  class_init.py  class_init_expected.py  function_raise.py  function_raise_expected.py  module.py  module_attribute.py  module_attribute_expected.py  simple_function_expected.py  typing.py  typing_expected.py  typing_mixing.py  typing_mixing_expected.py
