[tool.poetry]
name = "docstring"
version = "0.1.0"
description = ""
authors = ["manslaughter03 <manslaughter03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest = "^7.1.1"
flake8 = "^4.0.1"
flake8-bugbear = "^22.3.23"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "tests/*"]

[tool.coverage.report]
fail_under = 100
